material icons added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
+    <script src="https://kit.fontawesome.com/e190302051.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>E-commerce CoreBiz</title>
@@ -14,22 +15,21 @@
         <a href="#"
           ><img src="/images/gobeyond_logo_white 1.png" alt="logo"
         /></a>
-        <a href="#">Categoria 1</a>
-        <a href="#">Categoria 2</a>
+        <a href="#">Categoria 1 <i class="fas fa-sort-down"></i></a>
+        <a href="#">Categoria 2 <i class="fas fa-sort-down"></i></a>
         <a href="#">Fale Conosco</a>
         <div>
-          <input type="text" placeholder="O que está procurando?" /><button>
-            Search
-          </button>
+          <input type="text" placeholder="O que está procurando?" />
+          <button><i class="fas fa-search"></i></button>
         </div>
-        <a href="#">Minha Conta</a>
-        <a href="#">Carrinho</a>
+        <a href="#">Minha Conta <i class="fas fa-user-alt"></i></a>
+        <a href="#">Carrinho <i class="fas fa-shopping-cart"></i></a>
       </nav>
     </header>
     <main>
       <section class="banner">
         <div class="banner-left">
-          <p>Olá, mundo! <br /><span>Front-end/ Back-end/ Mobile</span></p>
+          <p>Olá! esta página foi criada por <br /><span>Antônio Basilio</span></p>
         </div>
         <div class="banner-right">
           <img
@@ -40,7 +40,7 @@
         </div>
       </section>
       <section class="container">
-        <h2>Mais vendidos</h2>
+        <h2 class="underlined-text">Mais vendidos</h2>
         <div class="card-container">
           <div class="card">
             <img src="/images/card_image_shoes.png" alt="item" />
@@ -78,8 +78,7 @@
       </aside>
       <footer>
           <div class="location">
-            <h2>Localização</h2>
-            <hr>
+            <h2 class="underlined-text">Localização <i class="fas fa-globe"></i></h2>
             <p>Avenida Andrômeda, 2000. Bloco 6 e 8 <br>
                 Alphaville, SP <br>
                 brasil@corebiz.ag <br>
@@ -87,8 +86,8 @@
             </p>
           </div>
           <div class="contacts">
-            <button class="support-button">Entre em contato</button>
-            <button class="support-button">Fale com o nosso consultor online</button>
+            <button class="support-button"><i class="fas fa-envelope"></i>  ENTRE EM CONTATO</button>
+            <button class="support-button"><i class="fas fa-headphones"></i> FALE COM NOSSO CONSULTOR ONLINE</button>
           </div>
           <div class="logos-footer">
               <img src="/images/logos_footer.png" alt="logosfooter">
