--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         /></a>
         <a href="#">Categoria 1 <i class="fas fa-sort-down"></i></a>
         <a href="#">Categoria 2 <i class="fas fa-sort-down"></i></a>
-        <a href="#">Fale Conosco</a>
+        <a href="#footer">Fale Conosco</a>
         <div>
-          <input type="text" placeholder="O que está procurando?" />
-          <button><i class="fas fa-search"></i></button>
+          <input class="search-bar" type="text" placeholder="O que está procurando?" />
+          <button class="search-btn" id="search-btn"><i class="fas fa-search"></i></button>
         </div>
         <a href="#">Minha Conta <i class="fas fa-user-alt"></i></a>
         <a href="#">Carrinho <i class="fas fa-shopping-cart"></i></a>
@@ -44,27 +44,27 @@
         <div class="card-container">
           <div class="card">
             <img src="/images/card_image_shoes.png" alt="item" />
-            <h3>Nome do produto</h4>
+            <h3>SAPATO FLOATER PRETO</h4>
             <h4>De R$200</h4>
             <h3>Por R$100</h3>
             <h4>ou 5x R$20</h4>
-            <button class="buy-button">Comprar</button>
+            <button class="buy-button">COMPRAR</button>
           </div>
           <div class="card">
             <img src="/images/card_image_shoes.png" alt="item" />
-            <h3>Nome do produto</h4>
+            <h3>SAPATO FLOATER PRETO</h4>
             <h4>De R$200</h4>
             <h3>Por R$100</h3>
             <h4>ou 5x R$20</h4>
-            <button class="buy-button">Comprar</button>
+            <button class="buy-button">COMPRAR</button>
           </div>
           <div class="card">
             <img src="/images/card_image_shoes.png" alt="item" />
-            <h3>Nome do produto</h4>
+            <h3>SAPATO FLOATER PRETO</h4>
             <h4>De R$200</h4>
             <h3>Por R$100</h3>
             <h4>ou 5x R$20</h4>
-            <button class="buy-button">Comprar</button>
+            <button class="buy-button">COMPRAR</button>
           </div>
         </div>
       </section>
@@ -76,7 +76,7 @@
           <button class="submit-button">Eu quero!</button>
         </div>
       </aside>
-      <footer>
+      <footer id="footer">
           <div class="location">
             <h2 class="underlined-text">Localização <i class="fas fa-globe"></i></h2>
             <p>Avenida Andrômeda, 2000. Bloco 6 e 8 <br>
