--- a/index.html
+++ b/index.html
@@ -11,21 +11,28 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a href="#"
-          ><img src="/images/gobeyond_logo_white 1.png" alt="logo"
-        /></a>
-        <a href="#">Categoria 1 <i class="fas fa-sort-down"></i></a>
-        <a href="#">Categoria 2 <i class="fas fa-sort-down"></i></a>
-        <a href="#footer">Fale Conosco</a>
-        <div>
-          <input class="search-bar" type="text" placeholder="O que está procurando?" />
-          <button class="search-btn" id="search-btn"><i class="fas fa-search"></i></button>
-        </div>
-        <a href="#">Minha Conta <i class="fas fa-user-alt"></i></a>
-        <a href="#">Carrinho <i class="fas fa-shopping-cart"></i></a>
-      </nav>
-    </header>
+        <nav>
+          <a class="logo" href="/"><img src="./images/gobeyond_logo_white 1.png" alt="logocorebiz"></a>
+          <ul class="nav-list">
+            <li><a href="#">Categoria 1</a></li>
+            <li><a href="#">Categoria 2</a></li>
+            <li><a href="#">Fale Conosco</a></li>
+            <li><a href="#"><i class="fas fa-user-alt"></i> Minha Conta</a></li>
+          </ul>
+          <div class="search-bar">
+              <input type="text" placeholder="O que você procura?">
+              <button class="search-btn"><i class="fas fa-search"></i></button>
+          </div>
+          <div class="cart">
+            <button class="cart-btn"><i class="fas fa-shopping-cart"></i></button>
+          </div>
+          <div class="mobile-menu">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+          </div>
+        </nav>
+      </header>
     <main>
       <section class="banner">
         <div class="banner-left">
@@ -95,4 +102,5 @@
       </footer>
     </main>
   </body>
+  <script src="script.js"></script>
 </html>
